k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: bookstore.aks.it.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 80
  tls:
    - hosts:
        - bookstore.aks.it.com
      secretName: bookstore-tls
